# incantation

./: .gitignore  README.md  io.github.invarianz.incantation.yml  meson.build
.github/workflows/: build-test.yml  flatpak.yml  validate.yml
data/: io.github.invarianz.incantation.desktop.in  io.github.invarianz.incantation.gresource.xml  io.github.invarianz.incantation.gschema.xml  io.github.invarianz.incantation.metainfo.xml.in  meson.build
data/content/: concepts.json
data/content/vala/: manifest.json
data/content/vala/exercises/: arrays-lists.json  compound-types.json  conditionals.json  functions.json  loops-definite.json  primitive-types.json  variables.json
data/icons/: ATTRIBUTION.md
data/styles/: app.css
po/: POTFILES  meson.build
src/: Application.vala  Config.vala.in  MainWindow.vala
src/Models/: Concept.vala  ConceptState.vala  Exercise.vala  ExerciseData.vala  ExerciseEnums.vala  ExplainExercise.vala  FillBlankExercise.vala  FreeWriteExercise.vala  Language.vala  LanguageMapping.vala  MatchingExercise.vala  MicroParsonsExercise.vala  MultipleChoiceExercise.vala  OathTier.vala  ParsonsExercise.vala  PredictOutputExercise.vala  RefactorExercise.vala  SessionResult.vala  SpotBugExercise.vala  TraceExercise.vala  TypeCodeExercise.vala
src/Services/: ContentLoader.vala  ProgressService.vala
src/Views/: GrimoireView.vala  HomeView.vala  ProfileView.vala  SessionView.vala  TowerView.vala
src/Widgets/: ConceptCard.vala  ExerciseWidget.vala  FlameDisplay.vala  SessionResultsWidget.vala  Sidebar.vala  SpellChainDisplay.vala
